Updated OAuth2 setup

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-TOKEN=MTM0MTg3MDA5MjA4NTg5MTEyMg.Gq62mz.KJnc5qTszEA8sbofKr_cQQ-gdrp1mywsG1-soY
+TOKEN=MTM0MTg3MDA5MjA4NTg5MTEyMg.GYpY2h.sWrRpPSQjrRAxojN80Bvi-ibyVMWqH5kJXJRx0
 MONGO_URI=mongodb+srv://cvine:EUdCz8jLURRVNAUp@cvine.ifwgf.mongodb.net/?retryWrites=true&w=majority&appName=cvine
 CLIENT_ID=1341870092085891122
-CLIENT_SECRET=aTkJE_ybC0qqtEqlypVKfIWMQyhI_6Bv
-REDIRECT_URI=https://your-website.onrender.com/oauth/callback
+CLIENT_SECRET=byg2QndV6MycbZ8iYP6isU4rTv8Kn1jU
+REDIRECT_URI=https://cvine-backend.onrender.com
 PORT=3000
